--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Widget para Notion</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>IG Feed calendar</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="widget">
-    <h1>Bem-vindo ao Widget!</h1>
-    <p>Customize esta área.</p>
-  </div>
-  <script src="script.js"></script>
+    <div id="widget">
+        <button id="refresh">🔄 Atualizar</button>
+        <div id="imageGrid"></div>
+        <button id="loadMore">Ver mais</button>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
