--- a/index.html
+++ b/index.html
@@ -3,15 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IG Feed calendar</title>
+    <title>IG Feed Calendar</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="widget">
-        <button id="refresh">🔄 Atualizar</button>
-        <div id="imageGrid"></div>
-        <button id="loadMore">Ver mais</button>
-    </div>
+    <header id="header">
+        <div id="insta-info">
+            <img src="instagram-icon.png" alt="Instagram" class="insta-icon">
+            <span id="instagram-name">@Nome do instagram do cliente</span>
+        </div>
+        <button id="refresh">
+            <img src="refresh-icon.png" alt="Atualizar">
+        </button>
+    </header>
+
+    <div id="imageGrid"></div>
+
+    <button id="loadMore">Ver mais</button>
+
     <script src="script.js"></script>
 </body>
 </html>
