--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header id="header">
         <button id="refresh">
-            <img src="refresh-icon.png" alt="Atualizar">
+             <img src="public/icons/refresh.svg" alt="Atualizar" style="width: 20px;"> Atualizar
         </button>
     </header>
 
